# aud-cbt

./: .gitignore  AUD_CBT_최종발표자료.pptx  LICENSE  README.md  package-lock.json  screenshot.mjs
backend/: .env.example  .gitignore  Dockerfile  ONBOARDING.md  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_llm_unlock_audit.py  0003_resume_briefing.py  0004_message_safety_excluded.py  0005_pii_encryption_access_log.py  0006_safety_event_reasoning.py  0007_patient_google_oauth.py  0008_patient_email_auth.py  0009_drop_google_oauth.py
backend/app/: cbt_stages.py  config.py  database.py  deps.py  encryption.py  exceptions.py  ids.py  main.py  middleware.py  ratelimit.py  security.py
backend/app/models/: __init__.py  access_log.py  conversation.py  daily_checkin.py  discharge_profile.py  llm_usage.py  medication.py  patient.py  provider.py  registration_code.py  safety_event.py  session.py  session_summary.py  support_person.py
backend/app/routers/: CLAUDE.md  auth.py  patient_checkin.py  patient_conversation.py  patient_home.py  patient_progress.py  patient_safety.py  patient_settings.py  provider_d0.py  provider_d2_dashboard.py  provider_d2_list.py  provider_d4.py  provider_profile.py
backend/app/schemas/: auth.py  (+8 more)
backend/scripts/: build_cbi_prompts.py  seed_demo.py  seed_scenarios.py  trace_agents.py
backend/tests/: test_end_route_integration.py  test_safety_classifier_negation.py  test_safety_unlock_context.py  test_session_advance.py  test_session_opening.py
(+178 files in other folders)
